kubernetes/apps/networking/cloudflared/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilium-ingress
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_TUNNEL_ID}.cfargotunnel.com"
spec:
  ingressClassName: cilium
  rules:
    - host: &host "ingress.voltaicforge.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: voltaicforge-tls
